tests/fail/expr/async.rs
fn main() {
    one_assert::assert!(async { false });
}
